--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         </div>
     </footer>
 
-    <script src="./node_modules/particles.js/particles.js"></script>
+    <script src="./js/particles.js"></script>
     <script src="./js/app.js"></script>
     <script src="js/aos-master/dist/aos.js"></script>
     <script>
